--- a/dbz/src/components/style.css
+++ b/dbz/src/components/style.css
@@ -71,12 +71,13 @@ body, html {
   width: 30px !important;
 }
 
-
-.space {
-  background-image: url('../assets/space.jpg');
+.cardCharacter img {
+  width: 100%;
+  height: 100%;
 }
 
-.shenron {
+
+.shenron, .dbz-character {
   width: 90%;
   height: 90%;
   cursor: pointer;
@@ -85,3 +86,5 @@ body, html {
 .shenron:hover {
   transform: rotateX(10deg) rotateY(10deg); /* ajusta según sea necesario para la inclinación deseada */
 }
+
+
