--- a/dbz/src/components/style.css
+++ b/dbz/src/components/style.css
@@ -174,4 +174,28 @@ body, html {
   .bulmaCards p {
     font-size: 12px;
   }
+
+  .buttonsDifficulty button {
+    padding: 6px;
+    font-size: 50px;
+    margin-top: auto;
+  }
+
+  .resultBox {
+    width: 80% !important;
+    gap: 12px !important;
+    font-size: 25px !important;
+  }
+
+  #cards {
+    border: 4px solid red;
+    height: 70%;
+  }
+
+  #cards div {
+    display: flex;
+    flex-wrap: wrap !important;
+    height: 50%;
+    max-width: 100%;
+  }
 }
