--- a/dbz/src/components/style.css
+++ b/dbz/src/components/style.css
@@ -111,7 +111,96 @@ body, html {
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 450px) and (max-width: 768px) {
+
+  .dbzLOGO {
+    top: 0;
+  }
+
+  .ballContainer {
+    display: flex;
+    flex-direction: column;
+    top: 4rem;
+    width: 90% !important;
+    height: 100% !important;
+  }
+
+  .clickToPlay {
+    width: 500px;
+    animation: none;
+  }
+
+  #dragonBall {
+    width: 100px;
+  }
+
+  .footer {
+    height: 120px !important;
+  }
+
+  .disco {
+    height: 80px !important;
+    width: 80px !important;
+  }
+
+  .instructionsContainer {
+    margin-right: 0.5rem !important;
+  }
+
+  .goten {
+    height: 80px !important;
+    width: 80px !important;  
+    margin-bottom: 0.5 !important;
+    margin-right: 0 !important;
+  }
+
+  .bulmaContainer {
+    bottom: 170px !important;  
+    margin: 0 !important;
+    width: 100% !important;
+  }
+
+  .bulma {
+    height: 70% !important;
+    margin-top: auto;
+  }
+
+  .bulmaCards {
+    display: flex;
+    flex-direction: column;
+    height: 100% !important;
+  }
+
+  .bulmaCards p {
+    font-size: 12px;
+  }
+
+  .buttonsDifficulty button {
+    padding: 6px;
+    font-size: 50px;
+    margin-top: auto;
+  }
+
+  .resultBox {
+    width: 80% !important;
+    gap: 12px !important;
+    font-size: 25px !important;
+  }
+
+  #cards {
+    border: 4px solid red;
+    height: 70%;
+  }
+
+  #cards div {
+    display: flex;
+    flex-wrap: wrap !important;
+    height: 50%;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
 
   .dbzLOGO {
     top: 0;
