--- a/dbz/src/components/style.css
+++ b/dbz/src/components/style.css
@@ -216,7 +216,7 @@ body, html {
     height: 60%;
     width: 100%;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     flex-wrap: wrap;
     margin-bottom: 10rem;
   }
@@ -322,17 +322,57 @@ body, html {
     gap: 12px !important;
     font-size: 25px !important;
   }
+}
 
+@media (min-width: 500px) and (max-width: 780px) {
   #cards {
-    border: 4px solid red;
-    height: 70%;
+    height: 60%;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    margin-bottom: 8rem;
+  }
+
+  #cards h1 {
+    bottom: 1rem;
   }
 
   #cards div {
     display: flex;
     flex-wrap: wrap !important;
-    height: 50%;
+    height: 30%;
     max-width: 100%;
+  }
+
+  #cards div img {
+    width: 50%;
+  }
+
+  .loadingContainer {
+    top: 3rem !important;
+    height: 100% !important;
+  }
+
+  .loadingContainer img {
+    margin-bottom: 0;
+    width: 50% !important;
   }
 }
 
+@media (min-width: 1024px) and (max-width: 1440px) {
+
+  #cards h1 {
+    bottom: 3rem;
+  }
+
+  .loadingContainer {
+    top: 3rem !important;
+    height: 100% !important;
+  }
+
+  .loadingContainer img {
+    margin-bottom: 0;
+    width: 50% !important;
+  }
+}
